# app-template

./: .gitignore  .titleconfig  CMakeLists.txt
src/: main.cpp
